# CMakeList.txt : CMake project for dp_lab5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (dp_lab5 "dp_lab5.cpp" "StateMachine.cpp" "States.cpp" "States.h" "StateMachine.h"    )

# TODO: Add tests and install targets if needed.
